--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,13 @@
 #
 # Pods/
 
+*.xcodeproj/*
+!*.xcodeproj/project.pbxproj
+
+*.xcworkspace/*
+!*.xcworkspace/contents.xcworkspacedata
+
+.DS_Store
+
+podfile.lock
+Pods/*
